Fix toolbar icon vs label spacing

--- a/src/Mapbender/CoreBundle/Resources/public/sass/theme/mapbender3.scss
+++ b/src/Mapbender/CoreBundle/Resources/public/sass/theme/mapbender3.scss
@@ -37,8 +37,8 @@
     @include border-radius($radius);
     // spacing between icon and label for buttons and similar elements
     [class^="icon"], [class*=" icon"] {
-      &:before {
-        margin-right: 0.4rem;
+      & +* {
+        margin-left: 0.4em;
       }
     }
   }
